--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Welcome to gabegaming.com your home for gags and gabes</title>
+        <title>Welcome to info1903.com</title>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="static/js/main.js"></script>
         <link rel="stylesheet" href="static/css/main.css" />
@@ -11,9 +11,9 @@
     <body>
 
     <div class="prepare-gag">
-        <h1>PLEASE PREPARE YOUR WALLET<br/>
+        <h1>PLEASE PREPARE YOUR TRANSCRIPT<br/>
         <div class="prepare-loader">
-            <img src="/static/img/walletisready.jpg" />
+            <img src="static/img/walletisready.jpg" />
         </div></h1>
     </div>
 
@@ -33,12 +33,12 @@
     </div>
 
     <div>
-        <iframe class="steam" name="steam" src="http://store.steampowered.com">
+        <iframe class="steam" name="steam" src="http://rp-www.cs.usyd.edu.au/~info1903/">
         </iframe>
     </div>
 
     <div class="sale-box animated sale" style="display:none;">
-        -50%
+        PYTHON
     </div>
 
 
