--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Welcome to info1903.com</title>
+        <title>PREPARE YOUR WALLET</title>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="static/js/main.js"></script>
         <link rel="stylesheet" href="static/css/main.css" />
@@ -19,7 +19,7 @@
 
     <div class="social-header">
         <div class="social-bar pull-right">
-            <a href="https://github.com/defaultnamehere/defaultnamehere.github.io" target="_blank"><div class="icon icon-gh"><i class="fa fa-github"></i></div></a>
+            <a href="https://github.com/Tpixelminer" target="_blank"><div class="icon icon-gh"><i class="fa fa-github"></i></div></a>
         </div>
     </div>
 
