--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
     <body>
 
     <div class="prepare-gag">
-        <h1>PLEASE PREPARE YOUR TRANSCRIPT<br/>
+        <h1>PLEASE PREPARE YOUR Wallet<br/>
         <div class="prepare-loader">
             <img src="static/img/walletisready.jpg" />
         </div></h1>
@@ -33,7 +33,7 @@
     </div>
 
     <div>
-        <iframe class="steam" name="steam" src="http://rp-www.cs.usyd.edu.au/~info1903/">
+        <iframe class="steam" name="steam" src="http://www.amazon.com/">
         </iframe>
     </div>
 
