--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>PREPARE YOUR NOTES</title>
+        <title>Hello</title>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="static/js/main.js"></script>
         <link rel="stylesheet" href="static/css/main.css" />
@@ -11,7 +11,7 @@
     <body>
 
     <div class="prepare-gag">
-        <h1>PLEASE PREPARE YOUR NOTES<br/>
+        <h1>WARNING: INCOMING TORNADO<br/>
         <div class="prepare-loader">
             <img src="static/img/walletisready.jpg" />
         </div></h1>
